<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:orientation="vertical"
	     android:layout_marginLeft="10dp"
	     android:layout_marginRight="5dp">
	     
	<TextView
    	android:id="@+id/textVIN"
 		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:maxLines="1"
	    android:text="@string/vin"
	    android:textSize="24sp"
	    android:textStyle="bold" />
	
	<AutoCompleteTextView
	     android:id="@+id/txtVIN"
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:maxLength="17"
	     android:completionThreshold="2"
	     android:textColor="#000000"
	     android:textSize="44sp" />
	     
	<LinearLayout
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal"
	     android:weightSum="99" >
	     <Button
	         android:id="@+id/btnIncindence"
	         android:layout_width="0dp"
	         android:layout_height="fill_parent"
	         android:text="@string/incidence"
	         android:gravity="center"
	         android:layout_weight="33"
	         android:textSize="26sp" >
	     </Button>
	     <Button
	         android:id="@+id/btnPhoto"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:text="@string/take_a_photography"
	         android:gravity="center"
	         android:layout_weight="33"
	         android:textSize="26sp" >
	     </Button>
	     <Button
	         android:id="@+id/btnLoad"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:text="@string/load"
	         android:gravity="center"
	         android:layout_weight="33"
	         android:textSize="26sp" >
	     </Button>
	</LinearLayout>
</LinearLayout>
