<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textIncidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
	    android:maxLines="1"
	    android:text="@string/incidence"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:textStyle="bold" />
    <EditText
        android:id="@+id/incidence"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="3"
        android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:textSize="24sp"
	    android:gravity="top|left" />
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp" >
	    <Button
	        android:id="@+id/btnCancel"
	        android:layout_width="100dp"
	        android:layout_height="50dp"
	        android:text="@string/cancel"
	        android:layout_alignParentLeft="true" />
	   <Button
	        android:id="@+id/btnSave"
	        android:layout_width="100dp"
	        android:layout_height="50dp"
			android:layout_alignParentRight="true"
	        android:text="@string/save" />
	</RelativeLayout>
</LinearLayout>